--- a/requirements.txt
+++ b/requirements.txt
@@ -1,98 +1,11 @@
-altair==5.4.1
-annotated-types==0.7.0
-anyio==4.6.2.post1
-appdirs==1.4.4
-attrs==24.2.0
-blinker==1.8.2
-cachetools==5.5.0
-certifi==2024.8.30
-cffi==1.17.1
-charset-normalizer==3.4.0
-click==8.1.7
-contourpy==1.3.0
-cryptography==43.0.3
-cycler==0.12.1
-deprecation==2.1.0
-distro==1.9.0
-dynaconf==3.2.6
-evidently==0.4.38
-Faker==30.6.0
-filelock==3.16.1
-fonttools==4.54.1
-fsspec==2024.9.0
-gitdb==4.0.11
-GitPython==3.1.43
-h11==0.14.0
-httpcore==1.0.6
-httptools==0.6.4
-httpx==0.27.2
-idna==3.10
-iterative-telemetry==0.0.9
-Jinja2==3.1.4
-joblib==1.4.2
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-kiwisolver==1.4.7
-litestar==2.12.1
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.9.2
-mdurl==0.1.2
-msgspec==0.18.6
-multidict==6.1.0
-mypy-extensions==1.0.0
-narwhals==1.9.4
-nltk==3.9.1
-numpy==2.0.2
-packaging==24.1
-pandas==2.2.3 
-patsy==0.5.6
-pillow==10.4.0
-plotly==5.24.1
-polyfactory==2.17.0
-protobuf==5.28.2
-pyarrow==17.0.0
-pycparser==2.22
-pydantic==2.9.2
-pydantic_core==2.23.4
-pydeck==0.9.1
-Pygments==2.18.0
-pyparsing==3.2.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-pytz==2024.2
-PyYAML==6.0.2
-referencing==0.35.1
-regex==2024.9.11
-requests==2.32.3
-rich==13.9.2
-rich-click==1.8.3
-rpds-py==0.20.0
-scikit-learn==1.5.2
-scipy==1.14.1
-seaborn==0.13.2
-setuptools==75.2.0
-shellingham==1.5.4
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.1
-statsmodels==0.14.4
-streamlit==1.39.0
-tenacity==9.0.0
-threadpoolctl==3.5.0
-toml==0.10.2
-tornado==6.4.1
-tqdm==4.66.5
-typer==0.12.5
-typing-inspect==0.9.0
-typing_extensions==4.12.2
-tzdata==2024.2
-ujson==5.10.0
-urllib3==2.2.3
-uuid6==2024.7.10
-uvicorn==0.32.0
-uvloop==0.21.0
-watchdog==5.0.3
-watchfiles==0.24.0
-websockets==13.1
-wheel==0.44.0
+  streamlit
+  pandas
+  numpy
+  scikit-learn
+  matplotlib
+  seaborn
+  plotly
+  evidently
+  pymongo
+  python-dotenv
+  dvc
